force-app/main/default/objects/Applicant_Backup__c/Applicant_Backup__c.object-meta.xml
<CustomObject>
    <label>Applicant Backup</label>
    <nameField>
        <displayFormat>APPBACKID-{0000}</displayFormat>
        <label>Applicant Backup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Backups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>