force-app/main/default/objects/Applicant_Backup__c/fields/Date_Of_Birth_Backup__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth_Backup__c</fullName>
    <label>Date Of Birth Backup</label>
    <type>Date</type>
</CustomField>