force-app/main/default/objects/Applicant_Backup__c/fields/First_Name_Backup__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Backup__c</fullName>
    <label>First Name Backup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>