force-app/main/default/objects/Applicant_Backup__c/fields/Gender_Backup__c.field-meta.xml
<CustomField>
    <fullName>Gender_Backup__c</fullName>
    <label>Gender Backup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>TransGender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>