force-app/main/default/objects/Applicant_Backup__c/fields/Last_Name_Backup__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Backup__c</fullName>
    <label>Last Name Backup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>